client: remove some jvm args